<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reddit Prime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_comments">Comments</string>
    <string name="title_activity_login">Login</string>
    <string name="action_login">Log In</string>
    <string name="action_logout">Logout</string>
    <string name="action_user">User</string>
    <string name="title_activity_article">Article</string>
    <string name="title_activity_reply">Reply</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_subreddit_search">SubredditSearch</string>
    <string name="action_message">Inbox</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="action_launch_browser"></string>
    <string name="action_submit">Submit a new post</string>
    <string name="title_activity_submit">Submit</string>
    <string name="title_activity_settings">Settings</string>

</resources>
