<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lightemittingsmew.redditreader.User" >

    <item android:id="@+id/action_new_message"
        android:icon="@drawable/message"
        android:title="@string/action_message"
        app:showAsAction="always" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_user"
        android:title="@string/action_user"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_message"
        android:title="@string/action_message"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
